src/test/deca/etapeB/invalid/initialization_diff_types_readint.deca
// Description : 
// 	test d'initialization d'une variable de type1 avec une variable de type //different
//Resultat:
//      Erreur Contextuelle :impossible d'initialiser une variable avec une autr//e d'un type different 
{
float x=readint();
}